# hypemoderpy-tuto

./: .python-version  LICENSE  README.md  pyproject.toml
src/hypemoderpy_tuto/: __init__.py  console.py
