[tool.poetry]
name = "hypemoderpy-tuto"
version = "0.1.0"
authors = ["javindra"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/javindra/hypemoderpy-tuto"
repository = "https://github.com/javindra/hypemoderpy-tuto"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
